maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
var entier =0 
while(!estSurBiscuit)
{
entier = random3(); 
if (entier=1)
{
avance();
}
else if (entier=2)
{
	droite();
}
else if (entier=3)
{
 gauche();	
}
}
}